@@ -1,3 +1,8 @@
+2005-12-25  Sebastian Kurfuerst  <sebastian@garbage-group.de>
+
+	* Fixed bug #2087, introduced by #1078
+	* Marked t3lib_ajax as subject to change
+
 2005-12-25  Dmitry Dulepov  <typo3@accio.lv>
 
 	* typo3/mod/user/ws/class.mod_user_ws_workspaceforms.php: renamed to workspaceforms.php
